crates/pipdock-cli/tests/snapshots/golden__schema-Code.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Every code PipDock can surface at v1 launch.\n\n`docs/TESTING.md` §2 requires at least one captured stderr fixture per variant before ship;\nthe test that enforces \"no code without fixture\" lives beside the classifiers.",
  "oneOf": [
    {
      "const": "PD-ENV-001",
      "description": "Interpreter path missing or not executable — the env was deleted or moved.",
      "type": "string"
    },
    {
      "const": "PD-ENV-002",
      "description": "PEP 668 `EXTERNALLY-MANAGED` marker present; mutation blocked by default.",
      "type": "string"
    },
    {
      "const": "PD-ENV-003",
      "description": "`probe.py` exited non-zero or produced unparseable output.",
      "type": "string"
    },
    {
      "const": "PD-ENG-001",
      "description": "pip or uv binary not found.",
      "type": "string"
    },
    {
      "const": "PD-ENG-002",
      "description": "pip older than 22.2, which predates `--dry-run --report`.",
      "type": "string"
    },
    {
      "const": "PD-ENG-003",
      "description": "uv emitted a shape the adapter does not recognize (uv newer than PipDock).",
      "type": "string"
    },
    {
      "const": "PD-ENG-999",
      "description": "Fallback for engine failures no classifier matched. Always last.",
      "type": "string"
    },
    {
      "const": "PD-RES-001",
      "description": "`ResolutionImpossible` or the uv equivalent: constraints cannot be satisfied.",
      "type": "string"
    },
    {
      "const": "PD-RES-002",
      "description": "Plan older than 10 minutes, or the env's probe hash changed since the preview.",
      "type": "string"
    },
    {
      "const": "PD-RES-003",
      "description": "A plan is already resolving or executing in this session.\n\nThe GUI drives one resumable flow across several IPC calls, so \"start a plan\" and \"run the\nplan\" are different messages arriving at different times — nothing structurally stops a\nsecond one arriving in between. Refusing is the only safe answer: two concurrent plans\nwould interleave engine commands against one environment, and DATA-FLOW §9.3's staleness\ncheck would be comparing against a set the other plan is busy changing.",
      "type": "string"
    },
    {
      "const": "PD-RES-004",
      "description": "A removal was asked for that the reverse-dependency guard refused (DATA-FLOW §5).\n\nIts own code rather than a reused one. The CLI printed `PD-PKG-002` here, which means \"no\nmatching distribution\" — the opposite of the truth: every package involved exists, and\nthat is precisely why the removal is being refused. A user grepping their logs for a typo\nwould have found this instead.\n\nNot raised when the guard merely *finds* dependents. That is a report the caller shows and\nthe user answers; the code appears only when execution is attempted anyway without the\nuser having accepted the breakage.",
      "type": "string"
    },
    {
      "const": "PD-BLD-001",
      "description": "MSVC build tools required but absent.",
      "type": "string"
    },
    {
      "const": "PD-BLD-002",
      "description": "Build backend failed (`pyproject.toml` error, `metadata-generation-failed`).",
      "type": "string"
    },
    {
      "const": "PD-BLD-003",
      "description": "Generic sdist wheel-build failure.",
      "type": "string"
    },
    {
      "const": "PD-PKG-001",
      "description": "No matching distribution, and metadata shows a requires-python mismatch.",
      "type": "string"
    },
    {
      "const": "PD-PKG-002",
      "description": "No matching distribution: name or version typo, or the release is gone.",
      "type": "string"
    },
    {
      "const": "PD-PKG-003",
      "description": "The requested release was yanked.",
      "type": "string"
    },
    {
      "const": "PD-PKG-004",
      "description": "Downloaded artifact failed hash verification.",
      "type": "string"
    },
    {
      "const": "PD-NET-001",
      "description": "Timeout, connection aborted, or DNS failure.",
      "type": "string"
    },
    {
      "const": "PD-NET-002",
      "description": "TLS/SSL verification failed — typically proxy or AV interception.",
      "type": "string"
    },
    {
      "const": "PD-NET-010",
      "description": "PEP 691 index refresh failed; the stale index stays searchable.",
      "type": "string"
    },
    {
      "const": "PD-NET-011",
      "description": "Code Health tools-venv bootstrap could not reach PyPI.",
      "type": "string"
    },
    {
      "const": "PD-PRM-001",
      "description": "`PermissionError` writing site-packages (admin-owned Python).",
      "type": "string"
    },
    {
      "const": "PD-PRM-002",
      "description": "File locked by a running process (`WinError 32`).",
      "type": "string"
    },
    {
      "const": "PD-SNP-001",
      "description": "Snapshot write failed before execution. **The plan is aborted; nothing runs.**",
      "type": "string"
    },
    {
      "const": "PD-SNP-002",
      "description": "A release needed to restore a snapshot is no longer available on PyPI.",
      "type": "string"
    },
    {
      "const": "PD-SYS-001",
      "description": "`MAX_PATH` exceeded without the long-path opt-in.",
      "type": "string"
    },
    {
      "const": "PD-SYS-002",
      "description": "Disk full.",
      "type": "string"
    },
    {
      "const": "PD-HLT-001",
      "description": "A Code Health tool is missing from the tools venv.",
      "type": "string"
    },
    {
      "const": "PD-HLT-002",
      "description": "A Code Health tool exited non-zero.",
      "type": "string"
    },
    {
      "const": "PD-HLT-003",
      "description": "A Code Health tool exceeded its watchdog timeout; partial report shown.",
      "type": "string"
    },
    {
      "const": "PD-HLT-004",
      "description": "`python -m venv` failed while building the tools environment.\n\n**Raised by PipDock, not classified from engine stderr.** Its own code rather than a reused\none: `PD-NET-011` is `Area::Net`, so `run::exit_for` would map a broken interpreter to exit\n6 and a script retrying on network failure would loop forever; `PD-HLT-001` tells the user\nto re-sync, which is the operation that just failed; and a Python built without `venv` is\nnot `PD-INT-001`'s \"a PipDock bug\".",
      "type": "string"
    },
    {
      "const": "PD-INT-001",
      "description": "A PipDock bug: panic or unexpected state.",
      "type": "string"
    }
  ],
  "title": "Code"
}
