crates/pipdock-cli/tests/snapshots/golden__schema-Diff.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{
  "$defs": {
    "ChangedEntry": {
      "description": "One package whose version differs between two states.",
      "properties": {
        "current": {
          "$ref": "#/$defs/Version",
          "description": "What is installed now."
        },
        "name": {
          "$ref": "#/$defs/PkgName",
          "description": "The package."
        },
        "snapshot": {
          "$ref": "#/$defs/Version",
          "description": "What the snapshot recorded."
        }
      },
      "required": [
        "name",
        "current",
        "snapshot"
      ],
      "type": "object"
    },
    "PinnedSpec": {
      "description": "A resolved, exact `name==version` pair. Only these reach a mutating engine command.",
      "properties": {
        "name": {
          "$ref": "#/$defs/PkgName",
          "description": "Normalized distribution name."
        },
        "version": {
          "$ref": "#/$defs/Version",
          "description": "The exact version the resolver chose."
        }
      },
      "required": [
        "name",
        "version"
      ],
      "type": "object"
    },
    "PkgName": {
      "description": "A PEP 503-normalized distribution name.\n\nConstructing one is the *only* way a package name reaches an argv array, which is what makes\nSECURITY §2's \"validated before it reaches argv\" claim structural rather than aspirational.",
      "type": "string"
    },
    "Version": {
      "description": "A version string as the engine reported it. Never reshaped or localized (I18N §2).",
      "type": "string"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "The difference between two environment states.",
  "properties": {
    "added": {
      "description": "Present now, absent in the snapshot.",
      "items": {
        "$ref": "#/$defs/PinnedSpec"
      },
      "type": "array"
    },
    "changed": {
      "description": "Present in both at different versions.",
      "items": {
        "$ref": "#/$defs/ChangedEntry"
      },
      "type": "array"
    },
    "removed": {
      "description": "Present in the snapshot, absent now.",
      "items": {
        "$ref": "#/$defs/PinnedSpec"
      },
      "type": "array"
    }
  },
  "required": [
    "added",
    "removed",
    "changed"
  ],
  "title": "Diff",
  "type": "object"
}
