crates/pipdock-cli/tests/snapshots/golden__schema-ExecutionSummary.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: out
---
{
  "$defs": {
    "CheckFinding": {
      "description": "One unsatisfied requirement reported by `pip check` / `uv pip check`.",
      "properties": {
        "pkg": {
          "$ref": "#/$defs/PkgName",
          "description": "The distribution whose requirement is unsatisfied."
        },
        "requirement": {
          "description": "Human-readable requirement text as the engine printed it.",
          "type": "string"
        }
      },
      "required": [
        "pkg",
        "requirement"
      ],
      "type": "object"
    },
    "CheckReport": {
      "description": "Post-execution environment verification.",
      "properties": {
        "findings": {
          "default": [],
          "description": "Details when `ok` is false.",
          "items": {
            "$ref": "#/$defs/CheckFinding"
          },
          "type": "array"
        },
        "ok": {
          "description": "True when the engine reported no broken requirements.",
          "type": "boolean"
        }
      },
      "required": [
        "ok"
      ],
      "type": "object"
    },
    "Code": {
      "description": "Every code PipDock can surface at v1 launch.\n\n`docs/TESTING.md` §2 requires at least one captured stderr fixture per variant before ship;\nthe test that enforces \"no code without fixture\" lives beside the classifiers.",
      "oneOf": [
        {
          "const": "EnvInterpreterMissing",
          "description": "Interpreter path missing or not executable — the env was deleted or moved.",
          "type": "string"
        },
        {
          "const": "EnvExternallyManaged",
          "description": "PEP 668 `EXTERNALLY-MANAGED` marker present; mutation blocked by default.",
          "type": "string"
        },
        {
          "const": "EnvProbeFailed",
          "description": "`probe.py` exited non-zero or produced unparseable output.",
          "type": "string"
        },
        {
          "const": "EngNotFound",
          "description": "pip or uv binary not found.",
          "type": "string"
        },
        {
          "const": "EngPipTooOld",
          "description": "pip older than 22.2, which predates `--dry-run --report`.",
          "type": "string"
        },
        {
          "const": "EngUvShapeUnknown",
          "description": "uv emitted a shape the adapter does not recognize (uv newer than PipDock).",
          "type": "string"
        },
        {
          "const": "EngUnclassified",
          "description": "Fallback for engine failures no classifier matched. Always last.",
          "type": "string"
        },
        {
          "const": "ResImpossible",
          "description": "`ResolutionImpossible` or the uv equivalent: constraints cannot be satisfied.",
          "type": "string"
        },
        {
          "const": "ResPlanStale",
          "description": "Plan older than 10 minutes, or the env's probe hash changed since the preview.",
          "type": "string"
        },
        {
          "const": "BldMsvcMissing",
          "description": "MSVC build tools required but absent.",
          "type": "string"
        },
        {
          "const": "BldBackendFailed",
          "description": "Build backend failed (`pyproject.toml` error, `metadata-generation-failed`).",
          "type": "string"
        },
        {
          "const": "BldWheelFailed",
          "description": "Generic sdist wheel-build failure.",
          "type": "string"
        },
        {
          "const": "PkgRequiresPython",
          "description": "No matching distribution, and metadata shows a requires-python mismatch.",
          "type": "string"
        },
        {
          "const": "PkgNotFound",
          "description": "No matching distribution: name or version typo, or the release is gone.",
          "type": "string"
        },
        {
          "const": "PkgYanked",
          "description": "The requested release was yanked.",
          "type": "string"
        },
        {
          "const": "PkgHashMismatch",
          "description": "Downloaded artifact failed hash verification.",
          "type": "string"
        },
        {
          "const": "NetUnreachable",
          "description": "Timeout, connection aborted, or DNS failure.",
          "type": "string"
        },
        {
          "const": "NetTlsFailure",
          "description": "TLS/SSL verification failed — typically proxy or AV interception.",
          "type": "string"
        },
        {
          "const": "NetIndexRefreshFailed",
          "description": "PEP 691 index refresh failed; the stale index stays searchable.",
          "type": "string"
        },
        {
          "const": "NetToolsBootstrapFailed",
          "description": "Code Health tools-venv bootstrap could not reach PyPI.",
          "type": "string"
        },
        {
          "const": "PrmSitePackagesReadOnly",
          "description": "`PermissionError` writing site-packages (admin-owned Python).",
          "type": "string"
        },
        {
          "const": "PrmFileLocked",
          "description": "File locked by a running process (`WinError 32`).",
          "type": "string"
        },
        {
          "const": "SnpWriteFailed",
          "description": "Snapshot write failed before execution. **The plan is aborted; nothing runs.**",
          "type": "string"
        },
        {
          "const": "SnpTargetUnavailable",
          "description": "A release needed to restore a snapshot is no longer available on PyPI.",
          "type": "string"
        },
        {
          "const": "SysPathTooLong",
          "description": "`MAX_PATH` exceeded without the long-path opt-in.",
          "type": "string"
        },
        {
          "const": "SysDiskFull",
          "description": "Disk full.",
          "type": "string"
        },
        {
          "const": "HltToolMissing",
          "description": "A Code Health tool is missing from the tools venv.",
          "type": "string"
        },
        {
          "const": "HltToolFailed",
          "description": "A Code Health tool exited non-zero.",
          "type": "string"
        },
        {
          "const": "HltTimeout",
          "description": "A Code Health tool exceeded its watchdog timeout; partial report shown.",
          "type": "string"
        },
        {
          "const": "IntUnexpected",
          "description": "A PipDock bug: panic or unexpected state.",
          "type": "string"
        }
      ]
    },
    "Counts": {
      "description": "Aggregate counts rendered as \"13 successful, 2 failed, 1 skipped\" (DATA-FLOW §6).",
      "properties": {
        "failed": {
          "description": "Steps that failed, each with a catalog code.",
          "format": "uint",
          "minimum": 0,
          "type": "integer"
        },
        "ok": {
          "description": "Steps that applied.",
          "format": "uint",
          "minimum": 0,
          "type": "integer"
        },
        "skipped": {
          "description": "Steps not attempted.",
          "format": "uint",
          "minimum": 0,
          "type": "integer"
        }
      },
      "required": [
        "ok",
        "failed",
        "skipped"
      ],
      "type": "object"
    },
    "ExecMode": {
      "description": "Which of the two execution phases produced a result (ARCHITECTURE §8).",
      "oneOf": [
        {
          "const": "batch",
          "description": "Phase A: one engine invocation for the whole pinned set.",
          "type": "string"
        },
        {
          "const": "isolated",
          "description": "Phase B: per-package sequential retry after Phase A failed. Skip-and-continue.",
          "type": "string"
        }
      ]
    },
    "PkgName": {
      "description": "A PEP 503-normalized distribution name.\n\nConstructing one is the *only* way a package name reaches an argv array, which is what makes\nSECURITY §2's \"validated before it reaches argv\" claim structural rather than aspirational.",
      "type": "string"
    },
    "StepResult": {
      "description": "One row of the summary report (DATA-FLOW §6).",
      "properties": {
        "code": {
          "anyOf": [
            {
              "$ref": "#/$defs/Code"
            },
            {
              "type": "null"
            }
          ],
          "description": "Catalog code, present exactly when `status` is `Failed`."
        },
        "from": {
          "anyOf": [
            {
              "$ref": "#/$defs/Version"
            },
            {
              "type": "null"
            }
          ],
          "description": "Version before the step, absent for a fresh install."
        },
        "pkg": {
          "$ref": "#/$defs/PkgName",
          "description": "Normalized distribution name."
        },
        "status": {
          "$ref": "#/$defs/StepStatus",
          "description": "Whether it applied."
        },
        "stderr_tail": {
          "description": "Tail of the engine's stderr for the failure detail pane.",
          "type": [
            "string",
            "null"
          ]
        },
        "to": {
          "anyOf": [
            {
              "$ref": "#/$defs/Version"
            },
            {
              "type": "null"
            }
          ],
          "description": "Version the step targeted."
        }
      },
      "required": [
        "pkg",
        "status"
      ],
      "type": "object"
    },
    "StepStatus": {
      "description": "Outcome of a single package's step.",
      "oneOf": [
        {
          "const": "ok",
          "description": "Applied successfully.",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Failed; carries a catalog code. Does **not** abort the batch.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Not attempted — user cancelled, or dropped by a Skip decision.",
          "type": "string"
        }
      ]
    },
    "Version": {
      "description": "A version string as the engine reported it. Never reshaped or localized (I18N §2).",
      "type": "string"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "The end-of-run report shown in the summary sheet and emitted by `--json`.",
  "properties": {
    "check": {
      "$ref": "#/$defs/CheckReport",
      "description": "Post-run `engine.check()`."
    },
    "counts": {
      "$ref": "#/$defs/Counts",
      "description": "Derived from `results`; see [`ExecutionSummary::tally`]."
    },
    "phase": {
      "$ref": "#/$defs/ExecMode",
      "description": "Which phase produced these results."
    },
    "plan_id": {
      "description": "Correlates the summary with its snapshot and log ring buffer.",
      "type": "string"
    },
    "results": {
      "default": [],
      "description": "One row per package.",
      "items": {
        "$ref": "#/$defs/StepResult"
      },
      "type": "array"
    }
  },
  "required": [
    "plan_id",
    "phase",
    "check",
    "counts"
  ],
  "title": "ExecutionSummary",
  "type": "object"
}
